--- a/config.toml
+++ b/config.toml
@@ -83,7 +83,7 @@ disqusShortname = ""
     # the 'static/img' folder.
     title = "Hi, my name is Kushal Kundanmal"
     subtitle = "Welcome to my Personal Portfolio Site"
-    buttonText = "Get Started"
+    buttonText = "See More"
 
 
   # Tiles Section
