--- a/config.toml
+++ b/config.toml
@@ -48,8 +48,8 @@ disqusShortname = ""
       url = "#"
 
     [[params.navigation.links]]
-      name = "Blogs"
-      url = "blogs"
+      name = "Projects"
+      url = "projects"
 
     #[[params.navigation.links]]
     #  name = "Generic Blog"
